human-intervention-logs/org.springframework.boot:spring-boot-integration:4.0.2/gradle-test/gradle-test-2026-05-19T08-28-11-344703Z.log
> Task :tck-build-logic:extractPluginRequests UP-TO-DATE
> Task :tck-build-logic:generatePluginAdapters UP-TO-DATE
> Task :tck-build-logic:compileJava UP-TO-DATE
> Task :tck-build-logic:compileGroovy UP-TO-DATE
> Task :tck-build-logic:compileGroovyPlugins UP-TO-DATE
> Task :tck-build-logic:pluginDescriptors UP-TO-DATE
> Task :tck-build-logic:processResources UP-TO-DATE
> Task :tck-build-logic:classes UP-TO-DATE
> Task :tck-build-logic:jar UP-TO-DATE

> Configure project :
GraalVM Reachability Metadata TCK
---------------------------------

> Task :tckTest
====================
Testing library: org.springframework.boot:spring-boot-integration:4.0.2
Command: `/home/vjovanov/c/forge/forge10/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/7089-b9839acb/gradlew nativeTest`
Executing test...
-------
Starting a Gradle Daemon, 1 busy and 5 stopped Daemons could not be reused, use --status for details
> Task :tck-build-logic:extractPluginRequests UP-TO-DATE
> Task :tck-build-logic:generatePluginAdapters UP-TO-DATE
> Task :tck-build-logic:compileJava UP-TO-DATE
> Task :tck-build-logic:compileGroovy UP-TO-DATE
> Task :tck-build-logic:compileGroovyPlugins UP-TO-DATE
> Task :tck-build-logic:pluginDescriptors UP-TO-DATE
> Task :tck-build-logic:processResources UP-TO-DATE
> Task :tck-build-logic:classes UP-TO-DATE
> Task :tck-build-logic:jar UP-TO-DATE
> Task :compileJava NO-SOURCE
> Task :tck-test-support:compileJava UP-TO-DATE
> Task :processResources NO-SOURCE
> Task :classes UP-TO-DATE
> Task :tck-test-support:processResources NO-SOURCE
> Task :tck-test-support:classes UP-TO-DATE
> Task :tck-test-support:jar UP-TO-DATE

> Task :compileTestJava FAILED
/home/vjovanov/c/forge/forge10/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/7089-b9839acb/tests/src/org.springframework.boot/spring-boot-integration/4.0.2/src/test/java/org_springframework_boot/spring_boot_integration/Spring_boot_integrationTest.java:180: error: reference to assertThat is ambiguous
            assertThat(future).isNotNull();
            ^
  both method <T>assertThat(T) in Assertions and method <RESULT>assertThat(Future<RESULT>) in Assertions match
  where T,RESULT are type-variables:
    T extends Comparable<? super T> declared in method <T>assertThat(T)
    RESULT extends Object declared in method <RESULT>assertThat(Future<RESULT>)
1 error


FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileTestJava'.
> Compilation failed; see the compiler output below.
[Incubating] Problems report is available at: file:///home/vjovanov/c/forge/forge10/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/7089-b9839acb/tests/src/org.springframework.boot/spring-boot-integration/4.0.2/build/reports/problems/problems-report.html
  /home/vjovanov/c/forge/forge10/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/7089-b9839acb/tests/src/org.springframework.boot/spring-boot-integration/4.0.2/src/test/java/org_springframework_boot/spring_boot_integration/Spring_boot_integrationTest.java:180: error: reference to assertThat is ambiguous
              assertThat(future).isNotNull();
              ^
    both method <T>assertThat(T) in Assertions and method <RESULT>assertThat(Future<RESULT>) in Assertions match
    where T,RESULT are type-variables:
      T extends Comparable<? super T> declared in method <T>assertThat(T)
      RESULT extends Object declared in method <RESULT>assertThat(Future<RESULT>)
  1 error

* Try:
> Check your code and dependencies to fix the compilation error(s)

Deprecated Gradle features were used in this build, making it incompatible with Gradle 10.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/9.1.0/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.
11 actionable tasks: 1 executed, 10 up-to-date
> Run with --scan to generate a Build Scan (Powered by Develocity).

BUILD FAILED in 5s

> Task :tckTest FAILED

[Incubating] Problems report is available at: file:///home/vjovanov/c/forge/forge10/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/7089-b9839acb/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':tckTest'.
> Test for org.springframework.boot:spring-boot-integration:4.0.2 failed with exit code 1.

* Try:
> Run with --stacktrace option to get the stack trace.
> Run with --info or --debug option to get more log output.
> Run with --scan to generate a Build Scan (Powered by Develocity).
> Get more help at https://help.gradle.org.

Deprecated Gradle features were used in this build, making it incompatible with Gradle 10.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/9.1.0/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 6s
9 actionable tasks: 1 executed, 8 up-to-date
